--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,56 @@
 <!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <meta name="description" content="<%= htmlWebpackPlugin.options.title %>">
+
+    <% if (webpackConfig.htmlElements.headTags) { %>
+    <!-- Configured Head Tags  -->
+    <%= webpackConfig.htmlElements.headTags %>
+    <% } %>
+
+    <!-- base url -->
+    <base href="<%= htmlWebpackPlugin.options.metadata.baseUrl %>">
+
+
+</head>
+
+<body>
+
+<hl-ask>
+    Loading...
+</hl-ask>
+
+<!-- Google Analytics: change UA-71073175-1 to be your site's ID -->
+<script>
+    /*(function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=r;A[l]=A[l]||function(){
+            (A[l].q=A[l].q||[]).push(arguments)},A[l].l=1*new Date();a=n.createElement(g),
+        r=n.getElementsByTagName(g)[0];a.async=1;a.src=u;r.parentNode.insertBefore(a,r)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-71073175-1', 'auto');
+    ga('send', 'pageview');*/
+</script>
+
+<% if (htmlWebpackPlugin.options.metadata.isDevServer && htmlWebpackPlugin.options.metadata.HMR !== true) { %>
+<!-- Webpack Dev Server reload -->
+<script src="/webpack-dev-server.js"></script>
+<% } %>
+
+
+</body>
+</html>
+
+
+
+
+<!--
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -9,16 +61,16 @@
 
     <title>Klingenthal</title>
 
-    <!-- Font Awesome -->
+    &lt;!&ndash; Font Awesome &ndash;&gt;
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
 
-    <!-- Bootstrap core CSS -->
+    &lt;!&ndash; Bootstrap core CSS &ndash;&gt;
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Material Design Bootstrap -->
+    &lt;!&ndash; Material Design Bootstrap &ndash;&gt;
     <link href="css/mdb.min.css" rel="stylesheet">
 
-    <!-- Template styles -->
+    &lt;!&ndash; Template styles &ndash;&gt;
     <style rel="stylesheet">
         /* TEMPLATE STYLES */
         /* Necessary for full page carousel*/
@@ -90,21 +142,21 @@
 <body>
 
 
-    <!--Navbar-->
+    &lt;!&ndash;Navbar&ndash;&gt;
     <nav class="navbar navbar-dark navbar-fixed-top scrolling-navbar">
 
-        <!-- Collapse button-->
+        &lt;!&ndash; Collapse button&ndash;&gt;
         <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#collapseEx">
             <i class="fa fa-bars"></i>
         </button>
 
         <div class="container">
 
-            <!--Collapse content-->
+            &lt;!&ndash;Collapse content&ndash;&gt;
             <div class="collapse navbar-toggleable-xs" id="collapseEx">
-                <!--Navbar Brand-->
+                &lt;!&ndash;Navbar Brand&ndash;&gt;
                 <a class="navbar-brand" href="http://klingenthal.fr" target="_blank">Klingenthal</a>
-                <!--Links-->
+                &lt;!&ndash;Links&ndash;&gt;
                 <ul class="nav navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link" href="./maison.html">Maison de la manufacture <span class="sr-only">(current)</span></a>
@@ -123,28 +175,28 @@
                     </li>
                 </ul>
             </div>
-            <!--/.Collapse content-->
+            &lt;!&ndash;/.Collapse content&ndash;&gt;
 
         </div>
 
     </nav>
-    <!--/.Navbar-->
+    &lt;!&ndash;/.Navbar&ndash;&gt;
 
-    <!--Carousel Wrapper-->
+    &lt;!&ndash;Carousel Wrapper&ndash;&gt;
     <div id="carousel-example-1" class="carousel slide carousel-fade" data-ride="carousel">
-        <!--Indicators-->
+        &lt;!&ndash;Indicators&ndash;&gt;
         <ol class="carousel-indicators">
             <li data-target="#carousel-example-1" data-slide-to="0" class="active"></li>
             <li data-target="#carousel-example-1" data-slide-to="1"></li>
         </ol>
-        <!--/.Indicators-->
+        &lt;!&ndash;/.Indicators&ndash;&gt;
 
-        <!--Slides-->
+        &lt;!&ndash;Slides&ndash;&gt;
         <div class="carousel-inner" role="listbox">
 
-            <!--First slide-->
+            &lt;!&ndash;First slide&ndash;&gt;
             <div class="carousel-item active">
-                <!--Caption-->
+                &lt;!&ndash;Caption&ndash;&gt;
                 <div class="flex-center animated fadeInDown">
                     <ul>
                         <li>
@@ -157,13 +209,13 @@
                         </li>
                     </ul>
                 </div>
-                <!--Caption-->
+                &lt;!&ndash;Caption&ndash;&gt;
             </div>
-            <!--/.First slide-->
+            &lt;!&ndash;/.First slide&ndash;&gt;
 
-            <!--Second slide -->
+            &lt;!&ndash;Second slide &ndash;&gt;
             <div class="carousel-item">
-                <!--Caption-->
+                &lt;!&ndash;Caption&ndash;&gt;
                 <div class="flex-center animated fadeInDown">
                     <ul>
                         <li>
@@ -177,13 +229,13 @@
                         </li>
                     </ul>
                 </div>
-                <!--Caption-->
+                &lt;!&ndash;Caption&ndash;&gt;
             </div>
-            <!--/.Second slide -->
+            &lt;!&ndash;/.Second slide &ndash;&gt;
         </div>
-        <!--/.Slides-->
+        &lt;!&ndash;/.Slides&ndash;&gt;
 
-        <!--Controls-->
+        &lt;!&ndash;Controls&ndash;&gt;
         <a class="left carousel-control" href="#carousel-example-1" role="button" data-slide="prev">
             <span class="icon-prev" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
@@ -192,163 +244,163 @@
             <span class="icon-next" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
-        <!--/.Controls-->
+        &lt;!&ndash;/.Controls&ndash;&gt;
     </div>
-    <!--/.Carousel Wrapper-->
+    &lt;!&ndash;/.Carousel Wrapper&ndash;&gt;
 
     <br>
 
-    <!--Content-->
+    &lt;!&ndash;Content&ndash;&gt;
     <div class="container">
         <div class="row">
-            <!--First columnn-->
+            &lt;!&ndash;First columnn&ndash;&gt;
             <div class="col-lg-4">
-                <!--Card-->
+                &lt;!&ndash;Card&ndash;&gt;
                 <div class="card">
 
-                    <!--Card image-->
+                    &lt;!&ndash;Card image&ndash;&gt;
                     <div class="view overlay hm-white-slight">
                         <img src="./img/maison-1.jpg" class="img-fluid" alt="">
                         <a href="#">
                             <div class="mask"></div>
                         </a>
                     </div>
-                    <!--/.Card image-->
+                    &lt;!&ndash;/.Card image&ndash;&gt;
 
-                    <!--Card content-->
+                    &lt;!&ndash;Card content&ndash;&gt;
                     <div class="card-block">
-                        <!--Title-->
+                        &lt;!&ndash;Title&ndash;&gt;
                         <h4 class="card-title">Maison de la manufacture</h4>
-                        <!--Text-->
+                        &lt;!&ndash;Text&ndash;&gt;
                         <p class="card-text">Texte 1.2.1</p>
                         <a href="#" class="btn btn-primary">Texte 1.2.2</a>
                     </div>
-                    <!--/.Card content-->
+                    &lt;!&ndash;/.Card content&ndash;&gt;
 
                 </div>
-                <!--/.Card-->
+                &lt;!&ndash;/.Card&ndash;&gt;
             </div>
-            <!--First columnn-->
+            &lt;!&ndash;First columnn&ndash;&gt;
 
-            <!--Second columnn-->
+            &lt;!&ndash;Second columnn&ndash;&gt;
             <div class="col-lg-4">
-                <!--Card-->
+                &lt;!&ndash;Card&ndash;&gt;
                 <div class="card">
 
-                    <!--Card image-->
+                    &lt;!&ndash;Card image&ndash;&gt;
                     <div class="view overlay hm-white-slight">
                         <img src="./img/ask-1.jpg" class="img-fluid" alt="">
                         <a href="#">
                             <div class="mask"></div>
                         </a>
                     </div>
-                    <!--/.Card image-->
+                    &lt;!&ndash;/.Card image&ndash;&gt;
 
-                    <!--Card content-->
+                    &lt;!&ndash;Card content&ndash;&gt;
                     <div class="card-block">
-                        <!--Title-->
+                        &lt;!&ndash;Title&ndash;&gt;
                         <h4 class="card-title">L'ASK</h4>
-                        <!--Text-->
+                        &lt;!&ndash;Text&ndash;&gt;
                         <p class="card-text">Texte 1.3.1</p>
                         <a href="#" class="btn btn-primary">Texte 1.3.2</a>
                     </div>
-                    <!--/.Card content-->
+                    &lt;!&ndash;/.Card content&ndash;&gt;
 
                 </div>
-                <!--/.Card-->
+                &lt;!&ndash;/.Card&ndash;&gt;
             </div>
-            <!--Second columnn-->
+            &lt;!&ndash;Second columnn&ndash;&gt;
 
-            <!--Third columnn-->
+            &lt;!&ndash;Third columnn&ndash;&gt;
             <div class="col-lg-4">
-                <!--Card-->
+                &lt;!&ndash;Card&ndash;&gt;
                 <div class="card">
 
-                    <!--Card image-->
+                    &lt;!&ndash;Card image&ndash;&gt;
                     <div class="view overlay hm-white-slight">
                         <img src="./img/histoire-1.jpg" class="img-fluid" alt="">
                         <a href="#">
                             <div class="mask"></div>
                         </a>
                     </div>
-                    <!--/.Card image-->
+                    &lt;!&ndash;/.Card image&ndash;&gt;
 
-                    <!--Card content-->
+                    &lt;!&ndash;Card content&ndash;&gt;
                     <div class="card-block">
-                        <!--Title-->
+                        &lt;!&ndash;Title&ndash;&gt;
                         <h4 class="card-title">L'histoire</h4>
-                        <!--Text-->
+                        &lt;!&ndash;Text&ndash;&gt;
                         <p class="card-text">Texte 1.4.1</p>
                         <a href="#" class="btn btn-primary">Texte 1.4.2</a>
                     </div>
-                    <!--/.Card content-->
+                    &lt;!&ndash;/.Card content&ndash;&gt;
 
                 </div>
-                <!--/.Card-->
+                &lt;!&ndash;/.Card&ndash;&gt;
             </div>
-            <!--Third columnn-->
+            &lt;!&ndash;Third columnn&ndash;&gt;
         </div>
     </div>
-    <!--/.Content-->
+    &lt;!&ndash;/.Content&ndash;&gt;
 
 
 
-    <!--Footer-->
+    &lt;!&ndash;Footer&ndash;&gt;
     <footer class="page-footer center-on-small-only">
 
-        <!--Footer Links-->
+        &lt;!&ndash;Footer Links&ndash;&gt;
         <div class="container-fluid">
             <div class="row">
 
-                <!--First column-->
+                &lt;!&ndash;First column&ndash;&gt;
 				<div class="col-lg-2 col-md-4 offset-lg-2">
                     <h5 class="title">Texte 1.11</h5>
                     <ul>
                         <li><a href="#!">Texte 1.12</a></li>                        
                     </ul>
                 </div>				
-                <!--/.First column-->
+                &lt;!&ndash;/.First column&ndash;&gt;
 
                 <hr class="hidden-md-up">
 
-                <!--Second column-->
+                &lt;!&ndash;Second column&ndash;&gt;
                 <div class="col-lg-2 col-md-4">
                     <h5 class="title">Texte 1.13</h5>
                     <ul>
                         <li><a href="#!">Texte 1.14</a></li>                        
                     </ul>
                 </div>
-                <!--/.Second column-->
+                &lt;!&ndash;/.Second column&ndash;&gt;
 
                 <hr class="hidden-md-up">
 
-                <!--Third column-->
+                &lt;!&ndash;Third column&ndash;&gt;
                 <div class="col-lg-2 col-md-4">
                     <h5 class="title">Texte 1.15</h5>
                     <ul>
                         <li><a href="#!">Texte 1.16</a></li>                        
                     </ul>
                 </div>
-                <!--/.Third column-->
+                &lt;!&ndash;/.Third column&ndash;&gt;
 
                 <hr class="hidden-md-up">
 
-                <!--Fourth column-->
+                &lt;!&ndash;Fourth column&ndash;&gt;
                 <div class="col-lg-2 col-md-4">
                     <h5 class="title">Text 1.17</h5>
                     <ul>
                         <li><a href="#!">Text 1.18</a></li>
                     </ul>
                 </div>
-                <!--/.Fourth column-->
+                &lt;!&ndash;/.Fourth column&ndash;&gt;
 
             </div>
         </div>
-        <!--/.Footer Links-->
+        &lt;!&ndash;/.Footer Links&ndash;&gt;
 
         <hr>
 
-        <!--Call to action-->
+        &lt;!&ndash;Call to action&ndash;&gt;
         <div class="call-to-action">
             <h4>Text 1.19</h4>
             <ul>
@@ -358,36 +410,36 @@
                 <li><a target="_blank" href="http://klingenthal.fr" class="btn btn-default">Texte 1.22</a></li>
             </ul>
         </div>
-        <!--/.Call to action-->
+        &lt;!&ndash;/.Call to action&ndash;&gt;
 
-        <!--Copyright-->
+        &lt;!&ndash;Copyright&ndash;&gt;
         <div class="footer-copyright">
             <div class="container-fluid">
 			Texte 1.23
 
             </div>
         </div>
-        <!--/.Copyright-->
+        &lt;!&ndash;/.Copyright&ndash;&gt;
 
     </footer>
-    <!--/.Footer-->
+    &lt;!&ndash;/.Footer&ndash;&gt;
 
 
-    <!-- SCRIPTS -->
+    &lt;!&ndash; SCRIPTS &ndash;&gt;
 
-    <!-- JQuery -->
+    &lt;!&ndash; JQuery &ndash;&gt;
     <script type="text/javascript" src="js/jquery-2.2.3.min.js"></script>
 
-    <!-- Bootstrap tooltips -->
+    &lt;!&ndash; Bootstrap tooltips &ndash;&gt;
     <script type="text/javascript" src="js/tether.min.js"></script>
 
-    <!-- Bootstrap core JavaScript -->
+    &lt;!&ndash; Bootstrap core JavaScript &ndash;&gt;
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
-    <!-- MDB core JavaScript -->
+    &lt;!&ndash; MDB core JavaScript &ndash;&gt;
     <script type="text/javascript" src="js/mdb.min.js"></script>
 
 
 </body>
 
-</html>
+</html>-->
